# gpu-particles

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  default-config.json  demo.json  device-query.txt  large.json  medium.json  smol-container.json  vcpkg.json
data/: default-config.json
demo/: grid_partition.cpp  open-file.cpp
include/: fps.hpp  json.hpp  particle.h  particle.hpp  pch.h  pch.hpp  scene.h  scene.hpp  vec2.h  vec2.hpp
src/: main.cpp  particle.cpp  particle.cu  scene.cpp  simulation_run.cu
